--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
 
-gem 'mysql2', '0.4.4'
-gem 'daru', '0.3'
-gem 'pg', '1.2.3'
+gem 'mysql2', git: "https://github.com/actsasflinn/mysql2.git", ref: "76ee6acb09077503a579f4ba5aae9b4137144957"
+gem 'daru'
+gem 'pg'
